fix svg text overflow

--- a/css/style.less
+++ b/css/style.less
@@ -31,6 +31,7 @@ text {
 svg {
   // border: 1px solid red; 
   margin-top: 1em;
+  overflow: visible!important; 
 }
 
 select {
